# cpp-ecs-engine

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GEMINI.md  README.md  plan.md  safecrowd-evacuation-result-metrics.md  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  lightweight-task.yml  task.yml
.github/workflows/: ci.yml  pr-policy.yml
assets/demo-layouts/: README.md  bottleneck_hall.dxf  branched_corridor_office.dxf  demo-2f-layout-review.json  generate_demo_layouts.py  multi_exit_concourse.dxf
assets/tool-icon-candidates/: README.md
cmake/: SafeCrowdImportStack.cmake
docs/: Floor_Plan_Design_Assignment.dxf  GitHub Project.md  JIBY_HOUSE_PLAN.dxf  Product Backlog.md  README.md  UI.md  alternative-recommendation-evidence.md  alternative-recommendation-plan.md  pressure-risk-summary.md  개요서.md  사용자 시나리오.md  설계 구조.md  위험 정의.md  유사제품.md  프로젝트 구조.md
docs/architecture/: UI 디자인 대상 창 목록.md  프로젝트 구조.md
docs/demo/: 시연 평면 가이드.md
docs/process/: GitHub Project.md  Pathfinder 조사 기반 반영 계획.md
docs/product/: Product Backlog - Pathfinder 반영안.md  Product Backlog.md  Sprint 시연 계획.md  개요서.md  고급 위험 모델.md  공개 성능 검증 데이터 조사.md  사용자 시나리오.md  애플리케이션 기능 기준.md  위험 정의.md
docs/references/: A_Simple_Entity_Component_System_ECS.html  Helbing Social Force 모델.md  Pathfinder 2026.1 군중 대피 시뮬레이션 기능 조사.md  Pathfinder_MassMotion_조사.md  Qt Widgets Designer 초기 세팅 튜토리얼.md  관련 논문 요약.md  보충.md  핵심 논문 1번.md  핵심 논문 1번에서 쓸 내용.md  핵심 논문 2번.md  핵심 논문 3번.md
docs/uml/: engine-core.puml  프로젝트 구조.puml
docs/제출용/: 최종 보고서.docx  최종 보고서.md
docs/제출용/종합설계/: 2조_문제정의서.docx  4월27일_발표대본.md  Pathfinder_반영_발표_초안.md  디자인개요서_2팀.docx  (+15 more)
enc_temp_folder/9c859a1ef0106f2a88fd13385262b99/: ScenarioSimulationInternal.cpp
src/application/: IssueCardWidget.cpp  IssueCardWidget.h  LayoutCanvasRendering.cpp  LayoutCanvasRendering.h  LayoutCanvasSnapping.cpp  LayoutCanvasSnapping.h  LayoutNavigationPanelWidget.cpp  LayoutNavigationPanelWidget.h  LayoutPreviewEditing.cpp  LayoutPreviewEditing.h  LayoutPreviewGeometry.cpp  LayoutPreviewGeometry.h  LayoutPreviewWidget.cpp  LayoutPreviewWidget.h  LayoutReviewCodec.cpp  LayoutReviewCodec.h  LayoutReviewWidget.cpp  LayoutReviewWidget.h  MainWindow.cpp  MainWindow.h  NavigationTreeWidget.cpp  NavigationTreeWidget.h  NewProjectRequest.h  NewProjectWidget.cpp  NewProjectWidget.h  ProjectListWidget.cpp  ProjectListWidget.h  ProjectMetadata.h  ProjectMetadataCodec.cpp  ProjectMetadataCodec.h  ProjectNavigatorActions.cpp  ProjectNavigatorActions.h  ProjectNavigatorWidget.cpp  ProjectNavigatorWidget.h  ProjectPersistence.cpp  ProjectPersistence.h  ProjectPersistenceJson.cpp  ProjectPersistenceJson.h  ProjectWorkspaceState.h  ResultArtifactsCodec.cpp  (+29 more)
src/domain/: AgentComponents.h  AgentSpawnSystem.cpp  AgentSpawnSystem.h  AlternativeRecommendationService.cpp  AlternativeRecommendationService.h  CanonicalGeometry.h  CompressionSystem.cpp  CompressionSystem.h  DemoFixtureService.cpp  DemoFixtureService.h  DemoLayouts.cpp  DemoLayouts.h  DomoFixtureService.h  DxfImportService.cpp  DxfImportService.h  FacilityLayout2D.h  FacilityLayoutBuilder.cpp  FacilityLayoutBuilder.h  Geometry2D.h  GeometryNormalizer.cpp  GeometryNormalizer.h  GeometryQueries.cpp  GeometryQueries.h  ImportContracts.h  ImportIssue.cpp  ImportIssue.h  ImportOrchestrator.h  ImportResult.h  ImportSemanticRules.cpp  ImportSemanticRules.h  ImportValidationService.cpp  ImportValidationService.h  Metrics.h  MovementComponents.h  MovementSystem.cpp  MovementSystem.h  PopulationSpec.h  PressureTuning.h  ProjectRepository.h  RawImportModel.h  (+24 more)
src/engine/: CommandBuffer.h  ComponentRegistry.h  DeterministicRng.h  EcsCore.h  EngineConfig.h  EngineRuntime.cpp  EngineRuntime.h  EngineState.h  EngineStats.h  EngineStepContext.h  EngineSystem.h  EngineWorld.h  Entity.h  EntityRegistry.cpp  EntityRegistry.h  FrameClock.cpp  FrameClock.h  IComponentStorage.h  PackedComponentStorage.h  ResourceStore.h  SystemDescriptor.h  SystemScheduler.cpp  SystemScheduler.h  TriggerPolicy.h  UpdatePhase.h  WorldQuery.h
tests/: AlternativeRecommendationServiceTests.cpp  CommandBufferTests.cpp  CompressionSystemTests.cpp  DemoFixtureServiceTests.cpp  DeterministicRngTests.cpp  DxfImportServiceTests.cpp  EcsCoreTests.cpp  EngineIntegrationTests.cpp  EngineRegistryTests.cpp  EngineRuntimeTests.cpp  EntityRegistryTests.cpp  FacilityLayoutBuilderTests.cpp  FrameClockTests.cpp  GeometryQueriesTests.cpp  ImportContractsTests.cpp  ImportValidationServiceTests.cpp  LayoutCanvasSnappingTests.cpp  PackedComponentStorageTests.cpp  ProjectPersistenceTests.cpp  ResourceStoreTests.cpp  SafeCrowdDomainTests.cpp  ScenarioAuthoringTests.cpp  ScenarioBatchRunnerTests.cpp  ScenarioCanvasAuthoringRulesTests.cpp  ScenarioSimulationRunnerTests.cpp  ScenarioSimulationSystemsTests.cpp  SnapshotTests.cpp  SystemSchedulerTests.cpp  TestMain.cpp  TestSupport.h  WorldQueryTests.cpp
tests/dxf/: README.md  blocking_review_demo.dxf  evacuation_complex_large.dxf  generate_building_samples.py  home_plan.dxf  office_suite.dxf
uml/: PlantUML 읽는 법.md  application-analysis-workspace.puml  application-analysis-workspace.puml 해설.md  application-authoring-workspace.puml  application-authoring-workspace.puml 해설.md  application-run-results-workflow.puml  application-run-results-workflow.puml 해설.md  application-workspace-state-model.puml  application-workspace-state-model.puml 해설.md  domain-control-model.puml  domain-control-model.puml 해설.md  domain-import-module.puml  domain-import-module.puml 해설.md  domain-result-artifacts.puml  domain-result-artifacts.puml 해설.md  domain-scenario-model.puml  domain-scenario-model.puml 해설.md  engine-ecs-core.puml  engine-ecs-core.puml 해설.md  engine-overview.puml  engine-overview.puml 해설.md  engine-routing-and-connectors.puml  engine-routing-and-connectors.puml 해설.md  engine-runtime-core.puml  engine-runtime-core.puml 해설.md  project-structure.puml  project-structure.puml 해설.md
uml/drawio/: .$project-structure.drawio.bkp  project-structure.drawio
발표/: tmp.md
(+24 files in other folders)
